--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- Dependencia del servicio commons-->
+		<dependency>
+			<groupId>com.instancia2</groupId>
+			<artifactId>servicio.commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
